Bug 167126 - Setting a macro to "Error Alert" in a cell validation, you will not be able to key in
Summary: Setting a macro to "Error Alert" in a cell validation, you will not be able t...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
25.8.0.0 alpha0+
Hardware: All All
: high major
Assignee: Not Assigned
URL:
Whiteboard: target:26.2.0 target:25.8.3.2
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Macro Cell-Validity
  Show dependency treegraph
 
Reported: 2025-06-20 07:49 UTC by nobu
Modified: 2025-11-10 10:14 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description nobu 2025-06-20 07:49:52 UTC
Description:
Setting a macro to "Error Alert" in a cell validation, you will not be able to key in.

Steps to Reproduce:
1. Open new Calc.
2. Select Cell [A1].
3. Insert Cell Validity. ( Menu - Data > Validity )
4. Criteria Tab :
   Allow : List
   Entities : a (for example)
5. Error Alert Tab :
   Action : Macro
   This bug does not affect whether the correct macro is set or not.
   You do not need to configure specific macros.
6. Close. ( Push OK Button )
7. In Cell [A1], "a" is displayed in the drop-down, and you can confirm that you can select correctly.
8. Insert "b" for Cell [A1].
9. Of course, the macro of the cell is not set, so the warning is displayed and the input is also rejected.
10. Move the cursor to Cell [A2] and try to enter some text in the cell.

Actual Results:
11. The cell is empty.
   You may be able to input using "Input line", but even if you confirm the input, it is not reflected in the cell.

Expected Results:
11. The cell should be fillable.


Reproducible: Always


User Profile Reset: No

Additional Info:

Not reproduced with
[2025-01-08]
Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 6700b311310a94e0de8123b307275cd553bb0d9b
CPU threads: 4; OS: Windows 10 X86_64 (build 19045); UI render: Skia/Vulkan; VCL: win
Locale: en-US (ja_JP); UI: en-US
Calc: CL threaded

Reproducible with
Version: 25.8.0.0.beta1 (X86_64) / LibreOffice Community
Build ID: 1b25e37a63c5a6f16bdcb365ed3da80ac419e6e4
CPU threads: 4; OS: Windows 10 X86_64 (build 19045); UI render: Skia/Raster; VCL: win
Locale: en-US (ja_JP); UI: en-US
Calc: CL threaded

Reproducible with
[2025-06-20]
Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 024053c0c140e1d167a0276f1885a21a160b45ac
CPU threads: 4; OS: Windows 10 X86_64 (build 19045); UI render: Skia/Raster; VCL: win
Locale: en-US (ja_JP); UI: en-US
Calc: CL threaded
Comment 1 Jessica 2025-06-20 09:02:32 UTC
I can confirm the bug in 
Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 497a4090de8a33704df4101fc078a48c4cf71101
CPU threads: 16; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Vulkan; VCL: win
Locale: de-DE (de_DE); UI: de-DE
Calc: threaded
Comment 2 Saburo 2025-06-21 07:26:56 UTC
bibisected with win64-25.8
author	Pranam Lashkari
commit 72bbb0dd4a368dab2b1bd99917cd07d23a92a3f0

sc: make data validy error dialog async (invalid value error)
Comment 3 Xisco Faulí 2025-10-02 14:50:00 UTC
*** Bug 168261 has been marked as a duplicate of this bug. ***
Comment 4 Takenori Yasuda 2025-10-03 05:11:31 UTC
It seems that the minimal trigger condition might be:
- Validity > Error Alert > Show error message when invalid values are entered: OFF (cf. Bug 168261, Comment 0) ※
- Validity > Criteria > Allow: all validities except "All values" (cf. Bug 168261, Comment 4)
- Input an invalid value into the cell that has Validity setting.

※ In the following case, this is optional:
- Validity > Error Alert > Contents > Action: Macro

Tested with:
Version: 25.8.3.0.0+ (X86_64) / LibreOffice Community
Build ID: 58f7ecbcf486672bc5c1dddd25cd0097113a8d51
CPU threads: 8; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Raster; VCL: win
Locale: ja-JP (ja_JP); UI: ja-JP
Calc: CL threaded Jumbo
Comment 5 Takenori Yasuda 2025-10-28 07:59:06 UTC
Regarding invalid input:
Entering a cell reference (e.g., =A2) does not commit the input when the Enter key is pressed. Instead, the reference shifts to A3, A4, and so on.
There appears to be no way to commit the input.

Tested with:
Version: 25.8.3.1 (X86_64)
Build ID: 52ad9dd1c984050a9fb6932dbfb16e86a49e9758
CPU threads: 8; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Raster; VCL: win
Locale: ja-JP (ja_JP); UI: ja-JP
Calc: CL threaded Jumbo
Comment 6 Timur 2025-10-30 11:09:10 UTC
Proposed fix https://gerrit.libreoffice.org/c/core/+/193186
Comment 7 Commit Notification 2025-11-03 14:37:06 UTC
Pranam Lashkari committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/0b9b82f41a1ff4cbbed6a7148b77cbc3b00c9716

tdf#167126: resume ScInputHandler even if error not displayed

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2025-11-03 15:40:19 UTC
Pranam Lashkari committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/d803223e55e5a762a6916e1c03459d931817ba70

tdf#167126: resume ScInputHandler even if error not displayed

It will be available in 25.8.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2025-11-04 12:36:20 UTC
Pranam Lashkari committed a patch related to this issue.
It has been pushed to "libreoffice-25-8-3":

https://git.libreoffice.org/core/commit/9d308f0acc9780906167b6cec436cf22c99fc2b9

tdf#167126: resume ScInputHandler even if error not displayed

It will be available in 25.8.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Takenori Yasuda 2025-11-06 12:21:27 UTC
I confirmed this bug has been fixed in the following build.

Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 620(Build:0)
CPU threads: 8; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Raster; VCL: win
Locale: ja-JP (ja_JP); UI: ja-JP
Calc: CL threaded Jumbo
https://dev-builds.libreoffice.org/daily/master/Win-x86_64@tb103-1-TDF/2025-11-05_03.04.26/
Comment 11 Takenori Yasuda 2025-11-08 09:49:55 UTC
I confirmed this bug has been fixed in the following build.

Version: 25.8.3.2 (X86_64) ※RC2
Build ID: 8ca8d55c161d602844f5428fa4b58097424e324e
CPU threads: 8; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Raster; VCL: win
Locale: ja-JP (ja_JP); UI: ja-JP
Calc: CL threaded Jumbo
Comment 12 BogdanB 2025-11-08 10:48:12 UTC
Pranam, you can mark the bug as Resolved. Thanks.
Comment 13 Pranam Lashkari 2025-11-10 10:14:44 UTC
fixed with commit 0b9b82f41a1ff4cbbed6a7148b77cbc3b00c9716