tdf#167126: resume ScInputHandler even if error not displayed

problem:
regression from 72bbb0dd4a368dab2b1bd99917cd07d23a92a3f0
when data validity dialog was not displayed, error function returned early
this caused issue with cell invalid data cleaning and it was not possible
to enter new data in any new cell

Change-Id: I612ea8b9c651afba1095fc14726e5398484207f5
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/193186
Reviewed-by: Pranam Lashkari <lpranam@collabora.com>
Tested-by: Jenkins