sc/source/core/data/validat.cxx
@@ -378,6 +378,7 @@ void ScValidationData::DoError(weld::Window* pParent, const OUString& rInput, co
 {
     if ( eErrorStyle == SC_VALERR_MACRO ) {
         DoMacro(rPos, rInput, nullptr, pParent);
+        callback(true);
         return;
     }
 
